--- a/src/ch11_상속/메소드 오버라이딩 이론.md
+++ b/src/ch11_상속/메소드 오버라이딩 이론.md
@@ -1,8 +1,10 @@
-#### 시작하며
+## _상위 클래스의 참조변수가 참조할 수 있는 대상의 범위_
+
+#### _시작하며_
 메소드 오버라이딩은 상위 클래스에 정의된 메소드를 하위 클래스에서 다시 정의하는 것을 뜻한다.<br>
 이렇듯 메소드 오버라이딩이 문법적으로는 단순하지만 이것이 가져다주는 이점은 결코 가볍지 않다.
 
-#### 상위 클래스의 참조변수가 참조할 수 있는 대상의 범위
+
 이전 예제에서 SmartPhone 클래스가 MobilePhone 클래스를 상속하는 형태로 클래스를 디자인한 
 바 있다.
 ```java
@@ -48,5 +50,101 @@ new SmartPhone("010-555-666","Nougat");
 SmartPhone phone = new SmartPhone("010-555-777", "Nougat");
 MobilePhone phone = new SmartPhone("010-555-777", "Nougat");
 ```
+
+### _지금까지 설명한 것을 예제를 통해 알아보자_
+```java
+//Overriding_Exam01.class 
+
+class MobilePhone{
+	protected String number;// 전화번호
+	
+	public MobilePhone(String number) {
+		this.number  = number;
+	}
+	
+	public void answers() {
+		System.out.println("Hi ~ from " + number);
+	}
+}
+
+//모바일폰을 상속받는 하위클래스 스마트폰
+class SmartPhone extends MobilePhone{
+	
+	private String androidVer;// 안드로이드 운영체제 네임(버전)
+
+	public SmartPhone(String number, String ver) {
+		super(number);
+		this.androidVer = ver;
+	}
+	
+	public void playApp() {
+		System.out.println("App is running in " + androidVer);
+	}
+}
+
+class Overriding_Exam01{
+
+    public static void main(String[] args) {
+		SmartPhone ph1 = new SmartPhone("010-111-222", "Andro01");
+		MobilePhone ph2 = new SmartPhone("010-444-333", "Andro02");
+		
+		ph1.answers();
+		ph1.playApp();
+		
+		ph2.answers();
+		//ph2.playApp();
+	}
+}
+
+```
+
+위 예제에서는 다음과 같이 인스턴스를 생성하였다.
+```java
+MobilePhone phone = new SmartPhone("010-555-777", "Nougat");
+```
+<br>
+
+그리고 다음과 같이 mobilePhone 클래스에 정의된 메소드를 호출하는데 이는 당연히 가능한 일이다.
+```java
+ph2.answer();
+```
+<br>
+
+그러나 다음과 같이 SmartPhone 클래스에 정의된 메소드의 호출은 불가능하다. 참조변수 ph2가 실제 참조
+하는 인스턴스가 SmartPhone 인스턴스이지만 불가능하다.
+```java
+ph2.playApp(); // 스마트폰 클래스에서 정의한 메소드
+```
+<br>
+
+참조변수 ph2는 MobilePhone형 참조변수이다. 이러한 경우 ph2를 통해서 접근이 가능한 멤버는<br>
+MobilePhone 클래스에 정의되었거나 이 클래스가 상속하는 클래스의 멤버로 제한된다.
+(ph2가 참조하는 인스턴스가 무엇인지는 상관이 없다.)<br>
+지금 설명한 이 내용이 비합리적이라고 생각할 수 있다. 참조변수의 형에 상관없이, 참조하는<br>
+인스턴스에 따라서 접근가능한 멤버가 결정되어야 한다고 생각할 수 있다. 그러나 그렇게 설계하지 않은<br>
+이유가 두 가지 있는데 그중 하나는 다음과 같다.
+<br>
+
+_실행 시간을 늦추는 결과로 이어질 수 있습니다_
+<br>
+
+자바는 메소드 호출 시 참조변수의 형을 참조 하여 그 메소드 호출이 옳은 것인지 판단한다.
+예를 들면 다음과 같다.(다음과 같이 컴파일러가 판단하고 컴파일을 한다.)
+
+```java
+ph2.answer();
+//ph2가 MobilePhone형이므로 MobilePhone 클래스의 메소드 answer은 호출가능하다.
+```
+<br>
+
+이러한 형태의 판단은 그 속도가 빠르다.(컴파일 단계에서 쉽게 판단 가능하다.)<br>
+그러나 실제 참조하는 인스턴스를 대상으로 메소드의 호출 가능성을 판단하는 일은 간단하지 않다.<br>
+참조하는 인스턴스의 종류는 코드의 흐름에 따라 얼마든지 달라질 수 있기 때문이다.<br>
+그런데 이러한 단점도 감수할 만한 가치가 있다면 감수했을 것이다. 그러나 이어서 언급하는 두 번째<br>
+이유는 이러한 단점을 감수할 필요가 없다는 결론을 내리게 한다.<br>
+아마도 이 내용은 다음 챕터까지 공부해야 완전히 이해할 수 있을 것이다.
+
+_참조변수의 타입을 기준으로 접근 가능한 멤버를 제한하는 것은 코드를 단순하게 한다._
+
 
 
