--- a/bin/ch11_상속/메소드 오버라이딩 이론.md
+++ b/bin/ch11_상속/메소드 오버라이딩 이론.md
@@ -1,4 +1,4 @@
-## _상위 클래스의 참조변수가 참조할 수 있는 대상의 범위_
+## 상속 오버라이딩 편 : 상위 클래스의 참조변수가 참조할 수 있는 대상의 범위
 
 #### _시작하며_
 메소드 오버라이딩은 상위 클래스에 정의된 메소드를 하위 클래스에서 다시 정의하는 것을 뜻한다.<br>
