--- a/src/ch11_상속/메소드 오버라이딩 이론.md
+++ b/src/ch11_상속/메소드 오버라이딩 이론.md
@@ -1,4 +1,4 @@
-## 상속 오버라이딩 편 : 상위 클래스의 참조변수가 참조할 수 있는 대상의 범위
+## 오버라이딩(Overriding) - 상위 클래스의 참조변수가 참조할 수 있는 대상의 범위
 
 #### _시작하며_
 메소드 오버라이딩은 상위 클래스에 정의된 메소드를 하위 클래스에서 다시 정의하는 것을 뜻한다.<br>
@@ -125,8 +125,7 @@ MobilePhone 클래스에 정의되었거나 이 클래스가 상속하는 클래
 이유가 두 가지 있는데 그중 하나는 다음과 같다.
 <br>
 
-_실행 시간을 늦추는 결과로 이어질 수 있습니다_
-<br>
+#### _실행 시간을 늦추는 결과로 이어질 수 있습니다_
 
 자바는 메소드 호출 시 참조변수의 형을 참조 하여 그 메소드 호출이 옳은 것인지 판단한다.
 예를 들면 다음과 같다.(다음과 같이 컴파일러가 판단하고 컴파일을 한다.)
@@ -144,7 +143,17 @@ ph2.answer();
 이유는 이러한 단점을 감수할 필요가 없다는 결론을 내리게 한다.<br>
 아마도 이 내용은 다음 챕터까지 공부해야 완전히 이해할 수 있을 것이다.
 
-_참조변수의 타입을 기준으로 접근 가능한 멤버를 제한하는 것은 코드를 단순하게 한다._
+#### _참조변수의 타입을 기준으로 접근 가능한 멤버를 제한하는 것은 코드를 단순하게 한다._
+
+단점이 많은 일부 기능을 제한함으로써 단순하고 명료한 코드의 작성을 유도하는 언어가 좋은 언어이다.
+그런 측면에서 참조변수의 타입을 기준으로 접근 가능한 멤버를 제한한 것은 의미가 있는 일이다.
+<br>
+
+내용이 길어져서 글을 여기서 마무리 짓는다. 
+<br>
+
+#### [다음 글 링크]("")
+
 
 
 
