--- a/bin/ch11_상속/메소드 오버라이딩 이론.md
+++ b/bin/ch11_상속/메소드 오버라이딩 이론.md
@@ -149,10 +149,9 @@ ph2.answer();
 그런 측면에서 참조변수의 타입을 기준으로 접근 가능한 멤버를 제한한 것은 의미가 있는 일이다.
 <br>
 
-내용이 길어져서 글을 여기서 마무리 짓는다. 
-<br>
-
-#### [다음 글 링크]("")
+#### [>다음 글(클래스의 상속과 참조변수의 참조 총 정리)]("")
+#### [<이전 글(클래스의 상속과 참조변수의 참조 총 정리)]("")
+#### [★홈으로(클래스의 상속과 참조변수의 참조 총 정리)]("")
 
 
 
