--- a/src/ch11_상속/메소드 오버라이딩 이론.md
+++ b/src/ch11_상속/메소드 오버라이딩 이론.md
@@ -1,4 +1,5 @@
-## 오버라이딩(Overriding) - 상위 클래스의 참조변수가 참조할 수 있는 대상의 범위
+# 오버라이딩(Overriding)
+## 상위 클래스의 참조변수가 참조할 수 있는 대상의 범위
 
 #### _시작하며_
 메소드 오버라이딩은 상위 클래스에 정의된 메소드를 하위 클래스에서 다시 정의하는 것을 뜻한다.<br>
@@ -149,9 +150,9 @@ ph2.answer();
 그런 측면에서 참조변수의 타입을 기준으로 접근 가능한 멤버를 제한한 것은 의미가 있는 일이다.
 <br>
 
-#### [>다음 글(클래스의 상속과 참조변수의 참조 총 정리)]("")
-#### [<이전 글(클래스의 상속과 참조변수의 참조 총 정리)]("")
-#### [★홈으로(클래스의 상속과 참조변수의 참조 총 정리)]("")
+#### [다음 글(클래스의 상속과 참조변수의 참조 총 정리)]("")
+#### [이전 글(IS - A 관계 예제)](https://github.com/gojaebeom/java_tutorial/blob/master/src/ch11_%EC%83%81%EC%86%8D/IS_A_%EC%98%88%EC%A0%9C.java)
+#### [★홈으로](https://github.com/gojaebeom/java_tutorial)
 
 
 
