--- a/bin/ch11_상속/메소드 오버라이딩 이론.md
+++ b/bin/ch11_상속/메소드 오버라이딩 이론.md
@@ -150,7 +150,7 @@ ph2.answer();
 그런 측면에서 참조변수의 타입을 기준으로 접근 가능한 멤버를 제한한 것은 의미가 있는 일이다.
 <br>
 
-#### [다음 글(클래스의 상속과 참조변수의 참조 총 정리)]("")
+#### [다음 글(클래스의 상속과 참조변수의 참조 총 정리)](https://github.com/gojaebeom/java_tutorial/blob/master/src/ch11_%EC%83%81%EC%86%8D/%EB%A9%94%EC%86%8C%EB%93%9C%20%EC%98%A4%EB%B2%84%EB%9D%BC%EC%9D%B4%EB%94%A9%20%EC%9D%B4%EB%A1%A002.md)
 #### [이전 글(IS - A 관계 예제)](https://github.com/gojaebeom/java_tutorial/blob/master/src/ch11_%EC%83%81%EC%86%8D/IS_A_%EC%98%88%EC%A0%9C.java)
 #### [★홈으로](https://github.com/gojaebeom/java_tutorial)
 
